# docs/swagger.yaml
@@ -1,5 +1,14 @@
 basePath: /api/v1
 definitions:
+  database.Attendee:
+    properties:
+      event_id:
+        type: integer
+      id:
+        type: integer
+      user_id:
+        type: integer
+    type: object
   database.Event:
     properties:
       date:
@@ -15,8 +24,8 @@ definitions:
       name:
         minLength: 3
         type: string
-      owner_id:
-        type: integer
+      owner:
+        $ref: '#/definitions/database.User'
     required:
     - date
     - description
@@ -30,6 +39,8 @@ definitions:
       id:
         type: integer
       name:
+        type: string
+      role:
         type: string
     type: object
   main.loginRequest:
@@ -47,6 +58,8 @@ definitions:
     properties:
       token:
         type: string
+      user:
+        $ref: '#/definitions/database.User'
     type: object
   main.registerRequest:
     properties:
@@ -63,10 +76,21 @@ definitions:
     - name
     - password
     type: object
+  main.updateUserRequest:
+    properties:
+      email:
+        type: string
+      name:
+        minLength: 2
+        type: string
+      password:
+        minLength: 8
+        type: string
+    type: object
 host: localhost:8080
 info:
   contact:
-    email: support@example.com
+    email: brookhave.dev@gmail.com
     name: API Support
   description: This is a sample server for a Go Gin Rest API application.
   termsOfService: http://swagger.io/terms/
@@ -108,7 +132,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/main.loginResponse'
+            $ref: '#/definitions/database.User'
         "400":
           description: Bad Request
           schema:
@@ -148,7 +172,7 @@ paths:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/database.User'
+            $ref: '#/definitions/main.loginResponse'
         "400":
           description: Bad Request
           schema:
@@ -170,6 +194,40 @@ paths:
       summary: User registration
       tags:
       - authentication
+  /auth/user:
+    put:
+      consumes:
+      - application/json
+      description: Update user email, name, and password
+      parameters:
+      - description: User update data
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/main.updateUserRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/database.User'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Update user information
+      tags:
+      - user
   /events:
     post:
       consumes:
@@ -259,6 +317,44 @@ paths:
       summary: Delete an event
       tags:
       - events
+    get:
+      consumes:
+      - application/json
+      description: Retrieve a single event by its ID
+      parameters:
+      - description: Event ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/database.Event'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Get an event
+      tags:
+      - events
     put:
       consumes:
       - application/json
@@ -317,6 +413,185 @@ paths:
       summary: Update an event
       tags:
       - events
+  /events/{id}/attendees:
+    get:
+      consumes:
+      - application/json
+      description: Retrieve a list of attendees for a specific event
+      parameters:
+      - description: Event ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/database.User'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Get attendees for event
+      tags:
+      - attendees
+  /events/{id}/attendees/{userId}:
+    delete:
+      consumes:
+      - application/json
+      description: Remove a user as an attendee from a specific event
+      parameters:
+      - description: Event ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: User ID
+        in: path
+        name: userId
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: Attendee successfully removed
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "403":
+          description: Forbidden
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Remove attendee from event
+      tags:
+      - attendees
+    post:
+      consumes:
+      - application/json
+      description: Add a user as an attendee to a specific event
+      parameters:
+      - description: Event ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: User ID
+        in: path
+        name: userId
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/database.Attendee'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "409":
+          description: Conflict
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Add attendee to event
+      tags:
+      - attendees
+  /users/{userId}/events:
+    get:
+      consumes:
+      - application/json
+      description: Retrieve a list of events for a specific attendee
+      parameters:
+      - description: User ID
+        in: path
+        name: userId
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/database.Event'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Get events by attendee
+      tags:
+      - attendees
 securityDefinitions:
   BearerAuth:
     description: Enter your bearer token in the format **Bearer &lt;token&gt;**
